--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:700');
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
 
 /* Fontawesome */
 @import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
@@ -21,4 +22,7 @@ a {
   text-decoration: none;
 }
 
+#logo {
+  font-family: 'Rock Salt', cursive;
+}
 
